Make sure long words don't cause a horizontal scrollbar

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -27,6 +27,7 @@ img {
 body { 
     font-family: Asap, sans-serif; font-size: 1.5rem;
     line-height: 1.5; 
+    word-break: break-word;
 } 
 
 main { 
